{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 16,
  "lineage": "c2229588-b811-4666-f7e9-8eaff71ad06f",
  "resources": [
    {
      "module": "module.aws_humangov_infrastructure[\"califonia\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:767397815952:instance/i-099b3869ee78e61b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099b3869ee78e61b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af45565f34a816ac",
            "private_dns": "ip-172-31-80-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.80.119",
            "public_dns": "ec2-54-165-229-81.compute-1.amazonaws.com",
            "public_ip": "54.165.229.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062eefc7a554e7026",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-califonia-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d75b32cc96c0a38",
            "tags": {
              "Name": "humangov-califonia"
            },
            "tags_all": {
              "Name": "humangov-califonia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01eb4f3836fb5ca78"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"califonia\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397815952:security-group/sg-01eb4f3836fb5ca78",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-01eb4f3836fb5ca78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-califonia-ec2-sg",
            "name_prefix": "",
            "owner_id": "767397815952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-califonia"
            },
            "tags_all": {
              "Name": "humangov-califonia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53718dd62d66dc8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:767397815952:instance/i-09a161e6fa8cc41ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a161e6fa8cc41ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0460d62cd555ae950",
            "private_dns": "ip-172-31-87-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.251",
            "public_dns": "ec2-3-83-50-40.compute-1.amazonaws.com",
            "public_ip": "3.83.50.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08276730de834b9fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-california-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d75b32cc96c0a38",
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cef25a129ca48fd5"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397815952:security-group/sg-0cef25a129ca48fd5",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-0cef25a129ca48fd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-california-ec2-sg",
            "name_prefix": "",
            "owner_id": "767397815952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53718dd62d66dc8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:767397815952:instance/i-06b48252f8f931e61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b48252f8f931e61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8cd7d51dd9f2b84",
            "private_dns": "ip-172-31-85-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.85.4",
            "public_dns": "ec2-54-161-191-111.compute-1.amazonaws.com",
            "public_ip": "54.161.191.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0986482e6f9d378b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-texas-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d75b32cc96c0a38",
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093f481fa797a29a1"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397815952:security-group/sg-093f481fa797a29a1",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-093f481fa797a29a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-texas-ec2-sg",
            "name_prefix": "",
            "owner_id": "767397815952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53718dd62d66dc8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}